# optimal-parsing

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: app.cpp
include/optimal-parsing/: compressor.hpp  dictionary.hpp  dictionary_opt.hpp  lzw.hpp  parser.hpp
